Fix layout issues in ServicesPage

--- a/src/assets/styles/components/entities/items/_items-list.scss
+++ b/src/assets/styles/components/entities/items/_items-list.scss
@@ -1,7 +1,8 @@
 .items-list {
   grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   gap: 0.75rem;
-  width: 100% !important;
+  width: 100%;
+
   .render-item-container {
     min-width: 100%;
   }
